updated cards and card spacing, cleaned up CSS

--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
     <!-- About Me -->
     <section class="blackToPurpleSection" id="about">
       <div class="container">
-        <br />
-        <br />
         <div class="row">
           <div class="col-lg-3 justify-content-center align-items-center">
             <img
@@ -154,10 +152,7 @@
                   class="d-block mx-auto"
                   alt="Assistant Secretary of Defense of Energy, Installations, and Environment"
                 />
-                <p class="client-text">
-                  Assistant Secretary of Defense of Energy, Installations, and
-                  Environment
-                </p>
+                <p class="client-text">Assistant Secretary of Defense</p>
               </div>
             </div>
 
@@ -182,9 +177,7 @@
                   class="d-block mx-auto"
                   alt="U.S. Bureau of Land Management"
                 />
-                <p class="client-text">
-                  U.S. Census Bureau Center for Data Dissemination
-                </p>
+                <p class="client-text">U.S. Census Bureau</p>
               </div>
             </div>
 
@@ -221,11 +214,11 @@
 
     <!-- Applications -->
     <!-- Header -->
-    <section class="purpleSection">
+    <main class="purpleSection">
       <div class="app_container">
         <div class="row">
           <div
-            class="col-md-12 d-flex justify-content-center align-items-center"
+            class="col-sm-12 d-flex justify-content-center align-items-center"
           >
             <h1 class="mainSectionHeader">Public Applications</h1>
           </div>
@@ -235,218 +228,162 @@
       <!-- First Row -->
       <div class="container">
         <div class="row">
-          <div class="col-md-12 d-flex align-items-center">
+          <div class="white-line"></div>
+
+          <div class="col-md-12 p-0 d-flex align-items-center">
             <h4 class="sectionHeader">
               <b>2024</b>
             </h4>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12 d-flex align-items-center">
-            <h5 class="sectionSubHeader">Lead Front-End Web Developer</h5>
-          </div>
-        </div>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="card-group text-center">
-            <div class="card justify-content-center">
-              <div class="position-relative">
-                <img
-                  src="./assets/images/DODClimate.png"
-                  class="card-img-side"
-                  alt="Climate Resilience Portal"
-                />
-                <div class="overlay">
-                  <p>
-                    Supported the Assistant Secretary of Defense for Energy,
-                    Installations, and Environment to modernize the Climate
-                    Resilience Portal.
-                  </p>
-                  <p>React, JavaScript, Leaflet</p>
+            <div class="card">
+              <a href="https://www.climate.mil/" target="blank">
+                <div class="position-relative">
+                  <img
+                    src="./assets/images/DODClimate.png"
+                    class="card-img-side"
+                    alt="Climate Resilience Portal"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Supported the Assistant Secretary of Defense for Energy,
+                      Installations, and Environment to modernize the Climate
+                      Resilience Portal.
+                    </p>
+                    <p>React, JavaScript, Leaflet</p>
+                  </div>
                 </div>
-              </div>
-              <div class="card-footer">
-                <a
-                  href="https://www.climate.mil/"
-                  class="btn btn-sm btn-primary"
-                  target="blank"
-                  >Explore the App</a
-                >
-              </div>
+              </a>
             </div>
-          </div>
         </div>
       </div>
       <!-- Second Row -->
-      <br /><br />
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 d-flex align-items-center">
+          <div class="white-line"></div>
+          <div class="col-sm-12 p-0 d-flex align-items-center">
             <h4 class="sectionHeader">
               <b>2022</b>
             </h4>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12 d-flex align-items-center">
-            <h5 class="sectionSubHeader">Lead UI Developer</h5>
-          </div>
-        </div>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="card-group text-center">
             <div class="card justify-content-center">
-              <div class="position-relative">
-              <img
-                src="./assets/images/Census.png"
-                class="card-img-side"
-                alt="data.census.gov"
-              />
-              <div class="overlay">
-                <p>
-                  Updated the Census Bureau's data dissemnation site to meet
-                  modern UI/UX design standards.
-                </p>
-                <p>Vue, MapLibre, Jest, Pinia</p>
-              </div>
-              </div>
-              <div class="card-footer">
-                <a
-                  href="https://data.census.gov"
-                  class="btn btn-sm btn-primary"
-                  target="blank"
-                  >Explore the App</a
-                >
-              </div>
+              <a href="https://data.census.gov" target="blank">
+                <div class="position-relative">
+                  <img
+                    src="./assets/images/Census.png"
+                    class="card-img-side"
+                    alt="data.census.gov"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Updated the Census Bureau's data dissemnation site to meet
+                      modern UI/UX design standards.
+                    </p>
+                    <p>Vue, MapLibre, Jest, Pinia</p>
+                  </div>
+                </div>
+              </a>
             </div>
-          </div>
         </div>
       </div>
       <!-- Third Row -->
-      <br /><br />
       <div class="container">
         <div class="row">
-          <div class="col-md-12 d-flex align-items-center">
-            <h4 class="sectionHeader">
-              2021
-            </h4>
-          </div>
-          <div class="col-md-12 d-flex align-items-center">
-            <h5 class="sectionSubHeader">
-              Lead Front-End Developer and Designer
-            </h5>
+          <div class="white-line"></div>
+          <div class="col-md-12 p-0 d-flex align-items-center">
+            <h4 class="sectionHeader">2021</h4>
           </div>
         </div>
       </div>
       <!-- card-deck 1 -->
       <div class="container">
-        <div class="card-deck justify-content-center">
-          <div class="card shadow-sm">
-            <div class="position-relative">
-            <img
-              src="./assets/images/Microsoft_apps.png"
-              class="card-img-top"
-              alt="Planetary Computer Applications"
-            />
-            <div class="overlay">
-              <p>
-                Partnered with Microsoft to develop some of the first
-                applications utilizing their AI for Earth software. Supported
-                the launch and marketing of AI for Earth.
-              </p>
-            </div>
-            </div>
-            <div class="card-footer text-center">
-              <a
-                href="https://analytics-lab.org/ecosystemmonitoring/"
-                class="btn btn-sm btn-primary"
-                target="blank"
-                >Learn about the Project</a
-              >
-            </div>
-          </div>
-          <div class="card shadow-sm justify-content-center">
-            <div class="position-relative">
-            <img
-              src="./assets/images/AnalyticsLab.png"
-              class="card-img-top"
-              alt="Image of construction site in front of a sunset"
-            />
-            <div class="overlay">
-              <p>
-                Leveraging Azure cloud infrastructure to create estimates and
-                maps of human land use metrics in collaborations with
-                Conservation Science Partners and Microsoft.
-              </p>
-            </div>
-            </div>
-            <div class="card-footer text-center">
-              <a
-                href="https://analytics-lab.org/ecosystemmonitoring/"
-                class="btn btn-sm btn-primary"
-                target="blank"
-                >Explore the App</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Row 4 -->
-      <br /><br />
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-md-12 d-flex align-items-center">
-            <h4 class="sectionHeader">
-              <b
-                >Microsoft Brazil and the Instituto Tecnologico Vale's Project
-                Fluvius - 2021</b
-              >
-            </h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 d-flex align-items-center">
-            <h5 class="sectionSubHeader">
-              Lead Front-End Developer and Designer
-            </h5>
-          </div>
-        </div>
-      </div> -->
-
-      <div class="container">
         <div class="row justify-content-center">
-          <div class="card-group text-center">
-            <div class="card justify-content-center">
+          <div class="col-md-6 col-sm-12 pl-0">
+          <div class="card shadow-sm">
+            <a
+              href="https://planetarycomputer.microsoft.com/applications"
+              target="blank"
+            >
               <div class="position-relative">
                 <img
-                  src="./assets/images/Brazil.jpg"
-                  class="card-img-side"
-                  alt="Sao Paulo River, Brazil"
+                  src="./assets/images/Microsoft_Planetary_LandingPage.png"
+                  class="card-img-top"
+                  alt="Planetary Computer Applications"
                 />
                 <div class="overlay">
                   <p>
-                    Estimating suspended sediment in the Itacaiunas River Basin
+                    Partnered with Microsoft to develop wildlife conservation
+                    applications utilizing their AI for Earth software.
                   </p>
                   <p>React, MapboxGL, Azure, Material-UI</p>
                 </div>
               </div>
-              <div class="card-footer">
-                <a
-                  href="https://fluviuswebapp.z22.web.core.windows.net"
-                  class="btn btn-sm btn-primary"
-                  target="blank"
-                  >Explore the App</a
-                >
+            </a>
+          </div>
+          </div>
+
+          <div class="col-md-6 col-sm-12 pr-0">
+          <div class="card shadow-sm">
+            <a
+              href="https://analytics-lab.org/ecosystemmonitoring/"
+              target="blank"
+            >
+              <div class="position-relative">
+                <img
+                  src="./assets/images/AnalyticsLab2.png"
+                  class="card-img-top"
+                  alt="Image of construction site in front of a sunset"
+                />
+                <div class="overlay">
+                  <p>
+                    Leveraged Azure cloud infrastructure to create estimates and
+                    maps of human land use metrics in collaborations with
+                    Conservation Science Partners and Microsoft.
+                  </p>
+                  <p>React, MapboxGL, Azure, Material-UI</p>
+                </div>
               </div>
-            </div>
+            </a>
+          </div>
           </div>
         </div>
       </div>
 
+      <div class="container">
+        <div class="row justify-content-center">
+            <div class="card justify-content-center">
+              <a
+                href="https://fluviuswebapp.z22.web.core.windows.net"
+                target="blank"
+              >
+                <div class="position-relative">
+                  <img
+                    src="./assets/images/Brazil.jpg"
+                    class="card-img-side"
+                    alt="Sao Paulo River, Brazil"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Estimating suspended sediment in the Itacaiunas River
+                      Basin
+                    </p>
+                    <p>React, MapboxGL, Azure, Material-UI</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+        </div>
+      </div>
+
       <div id="skills"></div>
-    </section>
+    </main>
 
     <!-- Skills -->
 
@@ -609,7 +546,7 @@
           </div>
         </div>
         <!-- Social Media Links -->
-        <div class="row justify-content-center mt-5">
+        <div class="row justify-content-center">
           <div class="col-md-6 text-center">
             <h4>Let's connect</h4>
             <div class="d-flex justify-content-center">
