fixed style on card overlay

--- a/index.html
+++ b/index.html
@@ -239,25 +239,25 @@
       </div>
       <div class="container">
         <div class="row justify-content-center">
-            <div class="card">
-              <a href="https://www.climate.mil/" target="blank">
-                <div class="position-relative">
-                  <img
-                    src="./assets/images/DODClimate.png"
-                    class="card-img-side"
-                    alt="Climate Resilience Portal"
-                  />
-                  <div class="overlay">
-                    <p>
-                      Supported the Assistant Secretary of Defense for Energy,
-                      Installations, and Environment to modernize the Climate
-                      Resilience Portal.
-                    </p>
-                    <p>React, JavaScript, Leaflet</p>
-                  </div>
+          <div class="card">
+            <a href="https://www.climate.mil/" target="blank">
+              <div class="position-relative">
+                <img
+                  src="./assets/images/DODClimate.png"
+                  class="card-img-side"
+                  alt="Climate Resilience Portal"
+                />
+                <div class="overlay">
+                  <p>
+                    Supported the Assistant Secretary of Defense for Energy,
+                    Installations, and Environment to modernize the Climate
+                    Resilience Portal.
+                  </p>
+                  <p>React, JavaScript, Leaflet</p>
                 </div>
-              </a>
-            </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Second Row -->
@@ -266,31 +266,31 @@
           <div class="white-line"></div>
           <div class="col-sm-12 p-0 d-flex align-items-center">
             <h4 class="sectionHeader">
-              <b>2022</b>
+              <b>2022 - 2023</b>
             </h4>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-            <div class="card justify-content-center">
-              <a href="https://data.census.gov" target="blank">
-                <div class="position-relative">
-                  <img
-                    src="./assets/images/Census.png"
-                    class="card-img-side"
-                    alt="data.census.gov"
-                  />
-                  <div class="overlay">
-                    <p>
-                      Updated the Census Bureau's data dissemnation site to meet
-                      modern UI/UX design standards.
-                    </p>
-                    <p>Vue, MapLibre, Jest, Pinia</p>
-                  </div>
+          <div class="card">
+            <a href="https://data.census.gov" target="blank">
+              <div class="position-relative">
+                <img
+                  src="./assets/images/Census.png"
+                  class="card-img-side"
+                  alt="data.census.gov"
+                />
+                <div class="overlay">
+                  <p>
+                    Updated the Census Bureau's data dissemnation site to meet
+                    modern UI/UX design standards.
+                  </p>
+                  <p>Vue, MapLibre, Jest, Pinia</p>
                 </div>
-              </a>
-            </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Third Row -->
@@ -306,79 +306,78 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6 col-sm-12 pl-0">
-          <div class="card shadow-sm">
-            <a
-              href="https://planetarycomputer.microsoft.com/applications"
-              target="blank"
-            >
-              <div class="position-relative">
-                <img
-                  src="./assets/images/Microsoft_Planetary_LandingPage.png"
-                  class="card-img-top"
-                  alt="Planetary Computer Applications"
-                />
-                <div class="overlay">
-                  <p>
-                    Partnered with Microsoft to develop wildlife conservation
-                    applications utilizing their AI for Earth software.
-                  </p>
-                  <p>React, MapboxGL, Azure, Material-UI</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          </div>
-
-          <div class="col-md-6 col-sm-12 pr-0">
-          <div class="card shadow-sm">
-            <a
-              href="https://analytics-lab.org/ecosystemmonitoring/"
-              target="blank"
-            >
-              <div class="position-relative">
-                <img
-                  src="./assets/images/AnalyticsLab2.png"
-                  class="card-img-top"
-                  alt="Image of construction site in front of a sunset"
-                />
-                <div class="overlay">
-                  <p>
-                    Leveraged Azure cloud infrastructure to create estimates and
-                    maps of human land use metrics in collaborations with
-                    Conservation Science Partners and Microsoft.
-                  </p>
-                  <p>React, MapboxGL, Azure, Material-UI</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row justify-content-center">
-            <div class="card justify-content-center">
+            <div class="card shadow-sm">
               <a
-                href="https://fluviuswebapp.z22.web.core.windows.net"
+                href="https://planetarycomputer.microsoft.com/applications"
                 target="blank"
               >
                 <div class="position-relative">
                   <img
-                    src="./assets/images/Brazil.jpg"
+                    src="./assets/images/Microsoft_Planetary_LandingPage.png"
                     class="card-img-side"
-                    alt="Sao Paulo River, Brazil"
+                    alt="Planetary Computer Applications"
                   />
                   <div class="overlay">
                     <p>
-                      Estimating suspended sediment in the Itacaiunas River
-                      Basin
+                      Partnered with Microsoft to develop wildlife conservation
+                      applications utilizing their AI for Earth software.
                     </p>
                     <p>React, MapboxGL, Azure, Material-UI</p>
                   </div>
                 </div>
               </a>
             </div>
+          </div>
+
+          <div class="col-md-6 col-sm-12 pr-0">
+            <div class="card shadow-sm">
+              <a
+                href="https://analytics-lab.org/ecosystemmonitoring/"
+                target="blank"
+              >
+                <div class="position-relative">
+                  <img
+                    src="./assets/images/AnalyticsLab2.png"
+                    class="card-img-side"
+                    alt="Image of construction site in front of a sunset"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Leveraged Azure cloud infrastructure to create estimates
+                      and maps of human land use metrics in collaborations with
+                      Conservation Science Partners and Microsoft.
+                    </p>
+                    <p>React, MapboxGL, Azure, Material-UI</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="card justify-content-center">
+            <a
+              href="https://fluviuswebapp.z22.web.core.windows.net"
+              target="blank"
+            >
+              <div class="position-relative">
+                <img
+                  src="./assets/images/Brazil.jpg"
+                  class="card-img-side"
+                  alt="Sao Paulo River, Brazil"
+                />
+                <div class="overlay">
+                  <p>
+                    Estimating suspended sediment in the Itacaiunas River Basin
+                  </p>
+                  <p>React, MapboxGL, Azure, Material-UI</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -468,14 +467,11 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-            <i class="icon-mysql skill" style="font-size: 3rem"></i>
-            <p>MySQL</p>
-          </div>
-          <div
-            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
-          >
-            <i class="icon-azure skill" style="font-size: 2.5rem"></i>
-            <p>Azure</p>
+            <i
+              class="fa fa-solid fa-leaf fa-3x skill"
+              style="font-size: 3rem"
+            ></i>
+            <p>Leaflet</p>
           </div>
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
@@ -483,13 +479,19 @@
             <i class="fa fa-solid fa-map-pin fa-3x skill"></i>
             <p>Mapbox</p>
           </div>
+          <div
+            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
+          >
+            <i class="icon-azure skill" style="font-size: 2.5rem"></i>
+            <p>Azure</p>
+          </div>
         </div>
-        <br id="contact" /><br /><br />
-        <div class="row d-flex justify-content-center align-items-center"></div>
+        <br  /><br /><br  />
+        <div  class="row d-flex justify-content-center align-items-center"></div>
       </div>
     </section>
 
-    <section class="blackSection">
+    <section id="contact" class="blackSection">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6">
