updating resume and title to match linkedIn

--- a/index.html
+++ b/index.html
@@ -89,17 +89,26 @@
 
           <div class="col-lg-9 justify-content-center align-items-left">
             <p style="font-size: 18px">
-              My name is Kristen Michelle Van Neste and I am a Lead Front-End
-              Engineer at Booz Allen Hamilton (BAH) in Washington, D.C.
+              My name is Kristen Michelle Van Neste, and I’m a Technical Project Manager and Senior Front-End
+              Engineer at Booz Allen Hamilton in
+              Washington, D.C.
             </p>
 
             <p style="font-size: 18px">
-              I specialize in building interactive applications and data
-              visualization dashboards by utilizing maps, animations, images,
-              charts, and videos. My ability to communicate effectively with
-              clients, developers, designers, and data scientists makes me a
-              valuable asset to any team. Data can tell a story, especially when
-              it is combined with a powerful interface and clean design.
+              I lead cross-functional teams to deliver innovative,
+              mission-driven software solutions, including interactive
+              applications and dynamic data visualization dashboards.
+              Specializing in geospatial tools, maps, animations, and multimedia
+              interfaces, I bring data to life through clean, compelling design.
+              </p>
+
+              <p style="font-size: 18px"></p>
+              My ability to manage projects, develop strategic roadmaps, and
+              foster strong client relationships ensures successful delivery on
+              high-profile contracts, from climate resilience tools to advanced
+              defense systems. Passionate about combining technology and design
+              to create meaningful impact, I thrive at the intersection of
+              creativity, collaboration, and purpose-driven development.
             </p>
           </div>
         </div>
@@ -486,8 +495,8 @@
             <p>Azure</p>
           </div>
         </div>
-        <br  /><br /><br  />
-        <div  class="row d-flex justify-content-center align-items-center"></div>
+        <br /><br /><br />
+        <div class="row d-flex justify-content-center align-items-center"></div>
       </div>
     </section>
 
