updated profile picture

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="col-lg-3 justify-content-center align-items-center">
             <img
               class="headshot"
-              src="./assets/images/IMG_1666.jpeg"
+              src="./assets/images/BlueShirt_TreeBg.jpeg"
               alt="headshot"
               width="220"
               height="220"
@@ -88,13 +88,13 @@
           </div>
 
           <div class="col-lg-9 justify-content-center align-items-left">
-            <p style="font-size: 16px">
+            <p style="font-size: 15px">
               My name is Kristen Michelle Van Neste, and I’m a Technical Project Manager and Senior Front-End
               Engineer at Booz Allen Hamilton in
               Washington, D.C.
             </p>
 
-            <p style="font-size: 16px">
+            <p style="font-size: 15px">
               I lead cross-functional teams to deliver innovative,
               mission-driven software solutions, including interactive
               applications and dynamic data visualization dashboards.
@@ -102,7 +102,7 @@
               interfaces, I bring data to life through clean, compelling design.
               </p>
 
-              <p style="font-size: 16px">
+              <p style="font-size: 15px">
               My ability to manage projects, develop strategic roadmaps, and
               foster strong client relationships ensures successful delivery on
               high-profile contracts, from climate resilience tools to advanced
