--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
           <div
             class="col-md-12 d-flex justify-content-center align-items-center"
           >
-            <h1 class="mainSectionHeader">Strongest Skills</h1>
+            <h1 class="mainSectionHeader">Technical Skills</h1>
           </div>
         </div>
         <div class="row">
