updated resume and color scheme

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/input.css" />
 
     <title>Kristen M. Van Neste's Portfolio</title>
-    <link rel="icon" type="image/png" href="./assets/images/K.png" />
+    <link rel="icon" type="image/png" href="./assets/images/purple_K.png" />
   </head>
 
   <body>
@@ -88,13 +88,13 @@
           </div>
 
           <div class="col-lg-9 justify-content-center align-items-left">
-            <p style="font-size: 15px">
+            <p style="font-size: 15px; text-align: justify">
               My name is Kristen Michelle Van Neste, and I’m a Technical Project Manager and Senior Front-End
               Engineer at Booz Allen Hamilton in
               Washington, D.C.
             </p>
 
-            <p style="font-size: 15px">
+            <p style="font-size: 15px; text-align: justify">
               I lead cross-functional teams to deliver innovative,
               mission-driven software solutions, including interactive
               applications and dynamic data visualization dashboards.
@@ -102,7 +102,7 @@
               interfaces, I bring data to life through clean, compelling design.
               </p>
 
-              <p style="font-size: 15px">
+              <p style="font-size: 15px; text-align: justify">
               My ability to manage projects, develop strategic roadmaps, and
               foster strong client relationships ensures successful delivery on
               high-profile contracts, from climate resilience tools to advanced
@@ -502,7 +502,7 @@
 
     <section id="contact" class="blackSection">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row pb-5 justify-content-center">
           <div class="col-md-6">
             <h2>Contact Me</h2>
             <!-- Contact Form -->
@@ -541,7 +541,7 @@
                   required
                 ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-warning">Submit</button>
             </form>
           </div>
           <div class="col-md-6">
@@ -558,17 +558,17 @@
         </div>
         <!-- Social Media Links -->
         <div class="row justify-content-center">
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 pt-4 text-center">
             <h4>Let's connect</h4>
             <div class="d-flex justify-content-center">
               <a
-                class="btn btn-primary mr-3"
+                class="btn btn-warning social-btn mr-4"
                 href="https://www.linkedin.com/in/kristen-m-van-neste/"
                 target="_blank"
                 >LinkedIn</a
               >
               <a
-                class="btn btn-primary mr-3"
+                class="btn social-btn btn-warning"
                 href="mailto:kmvanneste17@gmail.com"
                 >Gmail</a
               >
@@ -583,7 +583,7 @@
       id="contact"
       class="footer purpleSection d-flex justify-content-center"
     >
-      kmvn © 2024
+      kmvn © 2025
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
