updated links portfolio with latest projects

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
           <div class="col-lg-9 justify-content-center align-items-left">
             <p style="font-size: 15px; text-align: justify">
-              My name is Kristen Michelle Van Neste, and I’m a Technical Project Manager and Senior Front-End
-              Engineer at Booz Allen Hamilton in
+              My name is Kristen Michelle Van Neste, and I’m a Technical Project
+              Manager and Senior Front-End Engineer at Booz Allen Hamilton in
               Washington, D.C.
             </p>
 
@@ -100,9 +100,9 @@
               applications and dynamic data visualization dashboards.
               Specializing in geospatial tools, maps, animations, and multimedia
               interfaces, I bring data to life through clean, compelling design.
-              </p>
+            </p>
 
-              <p style="font-size: 15px; text-align: justify">
+            <p style="font-size: 15px; text-align: justify">
               My ability to manage projects, develop strategic roadmaps, and
               foster strong client relationships ensures successful delivery on
               high-profile contracts, from climate resilience tools to advanced
@@ -247,8 +247,16 @@
         </div>
       </div>
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="card">
+        <div class="row justify-content-center mb-4"><img src="assets/images/Frown.png" height="200" /> </div>
+        <div class="row justify-content-center mb-5">
+          
+          <div class="col-sm-6">
+            <h6 style="text-align: center;">
+              Due to recent administrative changes, the climate crisis
+              applications and dashboards are no longer publicly accessible.
+            </h6>
+          </div>
+          <!-- <div class="card">
             <a href="https://www.climate.mil/" target="blank">
               <div class="position-relative">
                 <img
@@ -266,7 +274,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
       <!-- Second Row -->
