--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
           
           <div class="col-sm-6">
             <h6 style="text-align: center;">
-              Due to recent administrative changes, the climate crisis
-              applications and dashboards are no longer publicly accessible.
+              Due to the recent federal administrative changes, the government climate crisis
+              applications and dashboards I managed and produced are no longer publicly accessible.
             </h6>
           </div>
           <!-- <div class="card">
