--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <div class="col-sm-6">
             <h6 style="text-align: center;">
               Due to the recent federal administrative changes, the government climate crisis
-              applications and dashboards I managed and produced are no longer publicly accessible.
+              applications and dashboards are no longer publicly accessible.
             </h6>
           </div>
           <!-- <div class="card">
