updated resume and description

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <div class="col-lg-9 justify-content-center align-items-left">
             <p style="font-size: 15px; text-align: justify">
               My name is Kristen Michelle Van Neste, and I’m a Technical Project
-              Manager and Senior Front-End Engineer at Booz Allen Hamilton in
-              Washington, D.C.
+              Manager at Booz Allen Hamilton in
+              Seattle, Washington.
             </p>
 
             <p style="font-size: 15px; text-align: justify">
@@ -556,7 +556,7 @@
             <!-- Resume Download -->
             <h6 pb="1">Download my resume:</h6>
             <iframe
-              src="./assets/images/KristenMVanNesteResume.pdf"
+              src="./assets/images/KristenMVanNesteResume_06:25.pdf"
               height="400px"
               min-width="300px"
               width="100%"
